# aiacc

./: CPP_Learning_notes.md  DPU Learn.md  Example_Page.html  FIFO_study.html  Lab-project-实现.md  Lab_10_Optimization.html  Lab_1_Simple-Dialect.html  Lab_2_Simple-Dialect.html  Lab_4_Builtin_Dialect.html  Lab_5_Arith.html  Lab_6.html  Lab_7_mem.html  Lab_8_Tensor.html  Lab_9_Linalg.html  Lab_Project_Sheet.html  Linux_Command_Line.html  Linux_Command_Line_guide.md  MLIR-Learning.md  MLIR_Dialect.html  MLIR_Dialect_Getting_Started_Notes.html  MLIR_Dialect_Notes-2.html  MLIR_Dialect_Notes_module1.html  MLIR_Dialect_Notes_module2.html  MLIR_Dialect_Notes_module3.html  MLIR官方文档阅读.md  P4tutorial.html  SMC_question.md  TPU-MLIR-Learning.md  TPU-MLIR学习记录（一）.md  TPU-MLIR学习记录（三）.md  TPU_MLIR_study.html  TableGen.html  TopOps.td代码阅读.md  VCS_coverage_report_read.html  index.html  search_index.json  shell_study.html
Dialect Lab/Lab 1/simple-dialect/: simple-opt  simple-opt.cpp  simple.mlir
Dialect Lab/Lab 4/: Lab_4_Builtin_Dialect.md
Dialect Lab/Lab 4/builtin-lab/: basic.mlir  (+4 more)
Dialect Lab/Lab 6/: run.md
Dialect Lab/Lab 9/: Lab_9_Linalg.md
Dialect Lab/Lab10/: Lab_10.md
Dialect Lab/Lab10/optimizationlab/: CMakeLists.txt  MyPatterns.cpp  test.mlir
Dialect Lab/LabProject/: ProjectSheet.md  Quick_Start.md
Dialect Lab/LabProject/shape-optimizer-project/framework/: CMakeLists.txt  ShapeOptimizerPass.cpp
SMC/01_intadd/: README.md  add32.v  add8.v  intadd.v  intadd_design_verification.md  intadd_interface.c  intadd_tb.v  read.md  run_simu.sh
SMC/03_fp16_to_fp32_multiplier/: README.md  fp16_to_fp32_multiplier.v  run_sim.sh  tb_fp16_to_fp32_multiplier.v  testplan.md
SMC/03_fp16mul/: README.md  fp16mul.v  run_sim.sh  softfloat_dpi.c  tb_fp16mul.v  testplan.md
SMC/04_fp32_addtree_5to1/: README.md  run_sim.sh
SMC/05_fp32_adder_tree/: README.md  run_sim_softfloat.sh  testplan.md
SMC/05_fp32_addtree_8to1/: README.md  run_sim.sh  testplan.md
SMC/06_fpmul/: README.md  failures.txt  run_sim.sh  testplane.md
SMC/07_FPADD/: run_sim.sh  spec.md  testplane.md
SMC/09_int_to_int/: INTtoINT_SPEC.md  run_sim.sh  testplan.md
SMC/10_fpto_int/: FPTOINT_SPEC.md  README.md  run_coverage.sh  run_sim.sh  testplan.md
SMC/11_INTtoFP/: run_sim.sh  spec.md.md  testplane.md.md
SMC/11_logical/: run_sim.sh  spec.md  testplane.md
SMC/12_logical/: spec.md.md.md  testplane.md.md.md
SMC/13_ldb/: run_sim.sh  spec.md  testplane.md
SMC/13_shift_up/: shiftup_spec.md  testplan.md
SMC/14_RUR/: run_sim.sh  spec.md.md.md  testplane.md.md.md
SMC/14_shift_down/: testplan.md
SMC/15_shift_up/: run_sim.sh  shiftup_spec.md  testplan.md
SMC/16_LDB/: run_sim.sh  spec.md.md.md
SMC/16_shift_down/: SHIFTDN_SPEC.md  run_sim.sh
SMC/17_stb/: R.md  README.md  axi_mem_model.v  axi_protocol_checker.v  axi_stb.v  axi_stb_s.v  axi_top.v  burst_store.v  burst_store_tb.v  burst_store_tb_coverage.v  run_coverage.sh  run_sim.sh  ur_model.v
SMC/18_LDB/: testplane.md.md.md
docs/: CPP_Learning_notes.md  DPU Learn.md  Example_Page.md  HTML.md  Lab_5_Arith.md  Lab_6.md  Lab_7_mem.md  Lab_8_Tensor.md  Linux_Command_Line.md  Linux_Command_Line_chmod.md  Linux_Command_Line_mkdir.md  MLIR-Learning.md  MLIR_Dialect.md  MLIR_Dialect_Getting_Started_Notes.md  MLIR_Dialect_Notes-2.md  MLIR_Dialect_Notes_module1.md  MLIR_Dialect_Notes_module2.md  MLIR_Dialect_Notes_module3.md  MLIR官方文档阅读.md  SUMMARY.md  TPU-MLIR 学习记录（二）.md  TPU_MLIR_study.md  VCS_coverage_report_read.md  shell_study.md
henry/01_intadd/: run_sim.sh  spec.md  testplan.md
roofline/: roofline.md
tpu-mlir-code-reading/OnnxToMlir/: MLIRImporter.py
(+633 files in other folders)
